Version 5.4.0
-------------

    * Now ships with a linter to identify potential problems in BUILD / build_defs files.
    * Minor determinism fix to go_get
    * please_pex now only specifies 'python', not the version it was built with.


Version 5.3.0
-------------

    * Some fairly extensive tweaks / cleanups to C++ rules.
    * Added config options for configuring flags for pip in pip_library rules.
    * Fixed generation of __init__.py files.
    * Various _test rules now support being passed flags which are added to their test_cmd.
    * Fixed some indeterminacy in some Java rules
    * Fixed some deps being incorrectly attached to proto rules of the wrong language.
    * Cache servers now accept durations in the form "3m", "10h25m", etc.
    * Cache servers have a parameter to clean artifacts that haven't been accessed in
      a certain period, defaulting to 30 days.


Version 5.2.3
-------------

    * Correct a small bug where visibility labels sometimes incorrectly applied too widely
    * Various Python rules now respect package() directives correctly
    * Fix to pip_library for rules with install_subdirectory=True and names not matching
      the package name.


Version 5.2.2
-------------

    * Added missing protoc tool to proto_library / grpc_library rules.


Version 5.2.1
-------------

    * Reduced cardinality of labels sent to Prometheus so pushgateways don't get
      overwhelmed so quickly.
    * Licence matching is now case-insensitive.


Version 5.2.0
-------------

    * Added support for pushing metrics to a Prometheus pushgateway
    * New flag --show_output / -s for plz test (+cover) to show the output of tests
      even when successful.
    * __init__.py writing moved from parse time to build time.
    * Releases now built with Go 1.7


Version 5.1.0
-------------

    * Initial C++ coverage support
    * Support for coverage in Go 1.7
    * Support for Go 1.7 style subtests
    * Added identifying labels to grpc_library rules